--- a/sites/all/modules/custom/blockexpose/css/blockexpose.css
+++ b/sites/all/modules/custom/blockexpose/css/blockexpose.css
@@ -1,45 +1,18 @@
-#remote-issue-tab,
-#remote-issue-tab .content,
-#open-close,
-#open-close p,
-#remote-issue-tab .subcontent,
-#remote-issue-tab .subcontent .new-items,
-#remote-issue-tab .subcontent .new-items h1 a,
-#remote-issue-tab .subcontent .items,
-#remote-issue-tab .subcontent .items h1,
-#remote-issue-tab .subcontent .items ul,
-#remote-issue-tab .subcontent .items ul li,
-#remote-issue-tab .subcontent .items ul li h3 a,
-#remote-issue-tab .subcontent .footer,
-#remote-issue-tab .subcontent .footer h1,
-#remote-issue-tab .subcontent .footer h3,
-#remote-issue-tab .subcontent .footer h1 a{
-  font-family:arial,sans-serif;
-  font-size:12px;
-  font-weight:400;
-  font-style:normal;
-  letter-spacing:normal;
-  word-spacing:0;
-  line-height:170%;
-  text-align:left;
-  z-index:1001;
-}
-#remote-issue-tab{
- position:fixed;
+.blockexpose{
  top:20px;
  right:-375px;
- width:400px;
+ width:400px;	
+ position:fixed;
  background-color:transparent;
  padding:0 !important;
- font-family:arial,sans-serif;
- text-align:left;
  opacity:0.95;
+ z-index:1001;
 }
-#remote-issue-tab .content{
+.blockexpose .content{
  margin:0 !important;
  padding-right:0;
 }
-#open-close{
+.open-close{
  top:30px;
  position:absolute;
  height:100px;
@@ -50,10 +23,10 @@
  padding:10px 0 10px 0;
  overflow:hidden;
 }
-#open-close:hover{
+.open-close:hover{
  cursor:pointer;
 }
-#open-close p{
+.open-close p{
   font-size:14px;
  color:#333;
  border:0px solid red;
@@ -67,7 +40,7 @@
  padding:0;
  margin:0;
 }
-#remote-issue-tab .subcontent{
+.blockexpose .subcontent{
  font-size:80%;
  min-height:200px;
  float:right;
@@ -77,77 +50,17 @@
  padding:5px;
  padding-right:0;
 }
-#remote-issue-tab .subcontent .new-items{
- margin-bottom:10px !important;
-}
-#remote-issue-tab .subcontent .new-items h1 a{
-  font-size:15px;
-  font-weight:bold;
-}
-#remote-issue-tab .subcontent .items{
-}
-#remote-issue-tab .subcontent .items h1{
- color:white;
- background-color:#555555;
- padding:3px;
- font-size:15px;
- font-weight:bold;
- margin:0;
- line-height:20px;
-}
-#remote-issue-tab .subcontent .items ul{
- margin:0.5em 0 1em;
- padding:0;
-}
-#remote-issue-tab .subcontent .items ul li{
- font-size:11px;
- background:none !important;
- padding:0.2em !important;
- border-top: 1px dotted #CCCCCC;
- list-style-type:none;
- padding:0.2em !important;
- margin: 0.15em 0 0.15em 0.5em !important;
-}
-#remote-issue-tab .subcontent .items ul li.first{
- border-top:none;
-}
-#remote-issue-tab .subcontent .items ul li h3 a{
-  font-size:13px;
-}
-#remote-issue-tab .subcontent .items ul li p{
- padding:0;
- margin:0;
- display:none;
-}
-#remote-issue-tab .subcontent .footer{
- background-color:#FFFFAA;
- padding:3px 3px 3px 10px;
-}
-#remote-issue-tab .subcontent .footer h1{
-font-size:15px;
-font-weight:bold;
-}
-#remote-issue-tab .subcontent .footer h3{
-font-size:13px;
-font-weight:400;
-}
-#remote-issue-tab .subcontent .footer h3 a{
-font-size:13px;
-font-weight:400;
-}
-
-#remote-issue-tab #open-close, #remote-issue-tab .subcontent, #remote-issue-tab .footer{
+.blockexpose .open-close, .blockexpose .subcontent, .blockexpose .footer{
  -moz-border-radius-topleft:5px;
  -webkit-border-top-left-radius:5px;
  -moz-border-radius-bottomleft:5px;
  -webkit-border-bottom-left-radius:5px;
 }
-#remote-issue-tab #open-close, #remote-issue-tab .subcontent{
+.blockexpose .open-close, .blockexpose .subcontent{
  -moz-box-shadow: -3px 3px 3px #bbb;
  -webkit-box-shadow: -3px 3px 3px #bbb;
  box-shadow: -3px 3px 3px #bbb;
 }
-
-#open-close, #remote-issue-tab .subcontent{
+.open-close, .blockexpose .subcontent{
  background-color:#f5f5f5;
 }
