--- a/sites/all/modules/custom/remote_issue_tab/css/remote_issue_tab.css
+++ b/sites/all/modules/custom/remote_issue_tab/css/remote_issue_tab.css
@@ -1,41 +1,19 @@
-
+#remote-issue-tab{
  font-family:arial,sans-serif;
-
-.blockexpose,
-.blockexpose .content,
-.open-close,
-.open-close p,
-.blockexpose .subcontent,
-.blockexpose .subcontent .new-items,
-.blockexpose .subcontent .new-items h1 a,
-.blockexpose .subcontent .items,
-.blockexpose .subcontent .items h1,
-.blockexpose .subcontent .items ul,
-.blockexpose .subcontent .items ul li,
-.blockexpose .subcontent .items ul li h3 a,
-.blockexpose .subcontent .footer,
-.blockexpose .subcontent .footer h1,
-.blockexpose .subcontent .footer h3,
-.blockexpose .subcontent .footer h1 a{
-  font-family:arial,sans-serif;
-  font-size:12px;
-  font-weight:400;
-  font-style:normal;
-  letter-spacing:normal;
-  word-spacing:0;
-  line-height:170%;
-  text-align:left;
+ font-size:12px;
+ font-weight:400;
+ font-style:normal;
+ letter-spacing:normal;
+ word-spacing:0;
+ text-align:left;	
 }
-.blockexpose .subcontent .new-items{
+#remote-issue-tab h1,#remote-issue-tab h3{
+ margin:0;
+}
+#remote-issue-tab .new-items{
  margin-bottom:10px !important;
 }
-.blockexpose .subcontent .new-items h1 a{
-  font-size:15px;
-  font-weight:bold;
-}
-.blockexpose .subcontent .items{
-}
-.blockexpose .subcontent .items h1{
+#remote-issue-tab .items h1{
  color:white;
  background-color:#555555;
  padding:3px;
@@ -44,11 +22,11 @@
  margin:0;
  line-height:20px;
 }
-.blockexpose .subcontent .items ul{
+#remote-issue-tab .items ul{
  margin:0.5em 0 1em;
  padding:0;
 }
-.blockexpose .subcontent .items ul li{
+#remote-issue-tab .items ul li{
  font-size:11px;
  background:none !important;
  padding:0.2em !important;
@@ -57,30 +35,30 @@
  padding:0.2em !important;
  margin: 0.15em 0 0.15em 0.5em !important;
 }
-.blockexpose .subcontent .items ul li.first{
+#remote-issue-tab .items ul li.first{
  border-top:none;
 }
-.blockexpose .subcontent .items ul li h3 a{
+#remote-issue-tab .items ul li h3 a{
   font-size:13px;
 }
-.blockexpose .subcontent .items ul li p{
+#remote-issue-tab .items ul li p{
  padding:0;
  margin:0;
  display:none;
 }
-.blockexpose .subcontent .footer{
+#remote-issue-tab .footer{
  background-color:#FFFFAA;
  padding:3px 3px 3px 10px;
 }
-.blockexpose .subcontent .footer h1{
+#remote-issue-tab .footer h1{
 font-size:15px;
 font-weight:bold;
 }
-.blockexpose .subcontent .footer h3{
+#remote-issue-tab .footer h3{
 font-size:13px;
 font-weight:400;
 }
-.blockexpose .subcontent .footer h3 a{
+#remote-issue-tab .footer h3 a{
 font-size:13px;
 font-weight:400;
 }
