--- a/sites/all/modules/custom/tinytax/css/tinytax.css
+++ b/sites/all/modules/custom/tinytax/css/tinytax.css
@@ -1,3 +1,16 @@
 .tinytax{
- font-size:200%;
+}
+.tinytax ul{
+ padding:0 !important;
+ margin:0 0 0 9px !important;
+}
+.tinytax li{
+ list-style:none;
+ line-height:1.2;
+ padding:0;
+ margin:0;
+ vertical-align:middle;
+}
+.tinytax img{
+ padding-right:5px;
 }
