Working, except for the search is a little buggy.

--- a/sites/all/modules/custom/tinytax/css/tinytax.css
+++ b/sites/all/modules/custom/tinytax/css/tinytax.css
@@ -14,3 +14,10 @@
 .tinytax img{
  padding-right:5px;
 }
+.tinytax-search-field{
+ width:100%;
+ padding-left:0 !important;
+ padding-right:0 !important;
+ margin-left:0 !important;
+ margin-right:0 !important;
+}
