--- a/sites/all/modules/custom/silver/css/silver.css
+++ b/sites/all/modules/custom/silver/css/silver.css
@@ -1,6 +1,4 @@
-#silver-import-form select, #silver-import-form input{
+#silver-import-form select,#silver-import-form input,#silver_import_subform select,#silver_import_subform input{
  width:100%;
-}
-#silver_import_subform select, #silver_import_subform input{
- width:100%;
+ font-size:110%;
 }
