Don't set the button to be 100% width.

--- a/sites/all/modules/custom/silver/css/silver.css
+++ b/sites/all/modules/custom/silver/css/silver.css
@@ -1,4 +1,4 @@
-#silver-import-form select,#silver-import-form input,#silver_import_subform select,#silver_import_subform input{
+#silver-import-form select,#silver_import_subform select{
  width:100%;
  font-size:110%;
 }
