--- a/sites/all/modules/custom/tui/css/tui.css
+++ b/sites/all/modules/custom/tui/css/tui.css
@@ -1,9 +1,26 @@
-.tui-has-children.tui-closed{
- color:red;
+.tui-has-children.tui-closed>div>span{
+ background-image:url('images/plus.gif');
 }
-.tui-has-children.tui-open{
- color:blue;
+.tui-has-children.tui-open>div>span{
+ background-image:url('images/minus.gif');
 }
-.tui-no-children{
- color:green;
+.tui-no-children>div>span{
+ background-image:url('images/leaf.gif');	
+}
+.tui-has-children.tui-load>div>span{
+ background-image:url('images/load.gif');	
+}
+.tui span{
+ background-repeat:no-repeat;
+ background-position:0 50%;
+ padding-left:20px;
+ width:16px;
+ height:16px;
+}
+.tui li{
+ margin:0;
+ width:300px;
+}
+.tui{
+	background-color:#ddffdd;
 }
