Still a lot to do, but committing before I delete some useful code for checking whether ctrl/cmd is pressed.

--- a/sites/all/modules/custom/tui/css/tui.css
+++ b/sites/all/modules/custom/tui/css/tui.css
@@ -66,6 +66,9 @@
  cursor:move;
  border:solid 1px #f3f3f3;
 }
+#tui-tree li div.tui-highlight{
+ background-color:#ffff83;
+}
 .placeholder {
  background-color: #cfcfcf;
 }
