--- a/sites/all/modules/custom/tui/css/tui.css
+++ b/sites/all/modules/custom/tui/css/tui.css
@@ -1,6 +1,6 @@
 /* AJAX */
 .progress-disabled,.ajax-progress,.throbber,.edit-term-link{
- float:right !important;
+ float:right;
  border:none !important;
 }
 
@@ -136,6 +136,29 @@
 #tui-tree-container{
  padding:0;
 }
+
+
+
+
+/* TREE FORM */
+#tui-tree-form{
+ border-bottom:solid 1px #eee;
+ display:none;
+ padding:8px;
+}
+#tui-tree-form input{
+ padding:5px;
+ margin:5px 3px 0 0;
+}
+#tui-tree-form input.form-autocomplete{
+ padding:2px;
+}
+#tui-tree-form .ajax-progress-throbber{
+ display:none;
+}
+
+
+
 /* TREE LINKS */
 #tui-tree-links{
  text-align:right;
@@ -154,33 +177,28 @@
 }
 
 /* SEARCH */
-#tui-search-form-container{
- display:none;
-}
-.tui-form{
- border:solid 1px #999;
- padding:3px;
- margin:0;
- background-color:white;
- color:black;
- position:absolute;
- top:20px;
- right:20px;
- z-index:1000;
-}
-#edit-tui-search-input-wrapper{
+.form-item-tui-search-input{
  display:inline;
 }
-#edit-tui-search-input-button{
+.form-item-tui-search-input input{
+ width:80%;
+}
+#edit-tui-search-input-button, #edit-tui-cancel-input-button{
  border:none;
  background-repeat:no-repeat;
  backgrond-position:50% 50%;
- background-image:url('images/find.png');
  width:20px !important;
  margin:0 !important;
  padding:0 !important;
  background-color:white;
- color:white;
+ color:transparent;
+ float:none !important;
+}
+#edit-tui-search-input-button{
+ background-image:url('images/find.png');
+}
+#edit-tui-cancel-input-button{
+ background-image:url('images/cancel.png');
 }
 #tui-search-form, #tui-search-form .form-item, #tui-search-form .form-submit{
  padding:0 !important;
