Working with lines too. FUCK YEAH!

--- a/sites/all/modules/custom/gm3/css/gm3.css
+++ b/sites/all/modules/custom/gm3/css/gm3.css
@@ -18,10 +18,9 @@
  margin:0 !important;
 }
 .gm3-tools ul li{
- padding:0 !important;
+ padding:0 0 0 3px !important;
  margin:0 !important;
- list-style:none;
- text-align: center; 
+ list-style:none; 
  position: relative;
  color: black;
  font-family: Arial,sans-serif;
