--- a/sites/all/modules/custom/gm3/css/gm3.css
+++ b/sites/all/modules/custom/gm3/css/gm3.css
@@ -35,12 +35,19 @@
  border-color:rgb(103, 138, 199);
  vertical-align:middle;
 }
-.gm3-tools ul li.gm3-clicked{	
+.gm3-tools ul li.gm3-clicked{
+ color:white;
+ font-weight:900;
  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgb(109, 138, 204)), to(rgb(123, 152, 217)));
- background: -moz-linear-gradient(center top , rgb(109, 138, 204), rgb(123, 152, 217)) repeat scroll 0% 0% transparent;	
+ background: -moz-linear-gradient(center top , rgb(109, 138, 204), rgb(123, 152, 217)) repeat scroll 0% 0% transparent; 
+}
+.gm3-tools ul li.gm3-clicked:hover{ 
+ background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgb(123, 152, 217)), to(rgb(109, 138, 204)));
+ background: -moz-linear-gradient(center top , rgb(123, 152, 217), rgb(109, 138, 204)) repeat scroll 0% 0% transparent; 
 }
 .gm3-tools ul li:hover{
- border-color: #aaa;	
+ background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgb(254, 254, 254)), to(rgb(243, 243, 243)));
+ background: -moz-linear-gradient(center top , rgb(254, 254, 254), rgb(243, 243, 243)) repeat scroll 0% 0% transparent;	
 }
 .gm3-tools ul li:last-child{
  border-bottom-width:1px;
