--- a/sites/all/modules/custom/gm3/css/gm3.css
+++ b/sites/all/modules/custom/gm3/css/gm3.css
@@ -1,3 +1,25 @@
+.gm3_information{
+ position:absolute;
+ top:5px;
+ left:50px;
+ margin:0;
+ padding:2px 4px;
+ color: black;
+ font-family: Arial,sans-serif;
+ -moz-user-select: none;
+ -webkit-user-select: none;
+ font-size: 10px;
+ background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgb(243, 243, 243)), to(rgb(254, 254, 254)));
+ background: -moz-linear-gradient(center top , rgb(243, 243, 243), rgb(254, 254, 254)) repeat scroll 0% 0% transparent;
+ border-width: 1px;
+ border-style:solid;
+ border-color:rgb(103, 138, 199);
+ vertical-align:middle;	
+}
+.gm3_information p{
+ padding:0;
+ margin:0;
+}
 .gm3-container{
  padding:0;
  margin:0;
