--- a/sites/all/modules/custom/eolapi/css/eolapi.css
+++ b/sites/all/modules/custom/eolapi/css/eolapi.css
@@ -1,10 +1,26 @@
-/*.view-eol-images .view-content div {
+.view-eol-images .view-content div {
 	margin: 0;
 	padding: 2px;
 	float: left;
-	height: 72px;
-	width: 102px;
+	height:104px;
+	width:104px;
+	overflow:hidden;
 }
-.view-eol-images .view-content div h2{
+.view-eol-images .view-content div h2,.view-eol-text .view-content div h2{
 	display:none;
-}*/
+}
+.view-eol-text>div>div.views-row-odd{
+  background-color:#eee;
+}
+.view-eol-text li, .view-eol-text ul{
+  padding-top:0 !important;
+  margin-top:0 !important;	
+  padding-bottom:0 !important;
+  margin-bottom:0 !important;
+}
+.view-eol-text{
+	font-size:90%;
+}
+.eolapi-text-hidden-block{
+	display:none;
+}
