--- a/sites/all/modules/custom/scratchpads/scratchpads_species/css/scratchpads_species.css
+++ b/sites/all/modules/custom/scratchpads/scratchpads_species/css/scratchpads_species.css
@@ -5,5 +5,9 @@
 /* Nomenclature block */
 
 .view-species-nomenclature div.label{
-  color: red;
+  display: inline;
+}
+
+.view-species-nomenclature div.label strong{
+  font-weight: bold;
 }
