--- a/sites/all/modules/custom/scratchpads/scratchpads_species/css/scratchpads_species.css
+++ b/sites/all/modules/custom/scratchpads/scratchpads_species/css/scratchpads_species.css
@@ -5,7 +5,12 @@
 /* Nomenclature block */
 
 .view-species-nomenclature div.label{
-  display: inline;
+  float:left;
+  clear: left;
+}
+
+.view-species-nomenclature div.name{
+  float:left;
 }
 
 .view-species-nomenclature div.label strong{
